force-app/main/default/objects/Form_Creation2__c/Form_Creation2__c.object-meta.xml
<CustomObject>
    <label>Form Creator</label>
    <nameField>
        <displayFormat>form-{0}</displayFormat>
        <label>Formcreator</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Creators</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>