force-app/main/default/objects/Form_Creation2__c/fields/Assigned_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Investigator__c</fullName>
    <label>Assigned Investigator</label>
    <type>Email</type>
</CustomField>