force-app/main/default/objects/Form_Creation2__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the applicant</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>