force-app/main/default/objects/Form_Creation2__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>30</length>
    <type>Text</type>
</CustomField>