force-app/main/default/objects/Form_Creation2__c/fields/FF_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>FF_Country_Code__c</fullName>
    <formula>$CustomMetadata.Phone_Code__mdt.India_Phone_Code.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Country Code</label>
    <type>Text</type>
</CustomField>