force-app/main/default/objects/Form_Creation2__c/fields/Indian_District__c.field-meta.xml
<CustomField>
    <fullName>Indian_District__c</fullName>
    <label>Indian District</label>
    <length>30</length>
    <type>Text</type>
</CustomField>