force-app/main/default/objects/Form_Creation2__c/fields/Indian_State__c.field-meta.xml
<CustomField>
    <fullName>Indian_State__c</fullName>
    <label>Indian State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>