force-app/main/default/objects/Form_Creation2__c/fields/Languages_Known__c.field-meta.xml
<CustomField>
    <fullName>Languages_Known__c</fullName>
    <label>Languages Known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANSI</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>PYTHON</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>