force-app/main/default/objects/Form_Creation2__c/fields/Reason_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Deletion__c</fullName>
    <label>Reason For Deletion</label>
    <type>TextArea</type>
</CustomField>