force-app/main/default/objects/Form_Creation2__c/fields/Salary_Expected__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expected__c</fullName>
    <externalId>true</externalId>
    <label>Salary Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>