force-app/main/default/objects/Form_Creation2__c/recordTypes/India.recordType-meta.xml
<RecordType>
    <fullName>India</fullName>
    <active>true</active>
    <label>India</label>
</RecordType>